move link, tables path to exe.config

--- a/StockManagement/App.config
+++ b/StockManagement/App.config
@@ -2,10 +2,28 @@
 <configuration>
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System">
+      
+      <section name="StockManagement.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
       <section name="DevExpress.LookAndFeel.Design.AppSettings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
+  
+      <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+          <section name="StockManagement.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+      </sectionGroup>
   </configSections>
   <applicationSettings>
+    
+    <StockManagement.Properties.Settings>
+      <setting name="apiEndPoint" serializeAs="String">
+        <value>http://localhost:8000/api/v1/</value>
+      </setting>
+      <setting name="stock" serializeAs="String">
+        <value>SK</value>
+      </setting>
+      <setting name="sale" serializeAs="String">
+        <value>KD</value>
+      </setting>
+    </StockManagement.Properties.Settings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DPIAwarenessMode" serializeAs="String">
         <value>System</value>
@@ -77,4 +95,50 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+<userSettings>
+        <StockManagement.Properties.Settings>
+                <setting name="token" serializeAs="String">
+                        <value />
+                </setting>
+                <setting name="roles" serializeAs="String">
+                        <value />
+                </setting>
+                <setting name="authorizePath" serializeAs="String">
+                        <value>auth/</value>
+                </setting>
+                <setting name="quotationItemsPath" serializeAs="String">
+                        <value>quotationitems</value>
+                </setting>
+                <setting name="inventorysPath" serializeAs="String">
+                        <value>inventorys</value>
+                </setting>
+                <setting name="stockinPlanDetailsPath" serializeAs="String">
+                        <value>stockinplandetails</value>
+                </setting>
+                <setting name="stockoutPlanDetailsPath" serializeAs="String">
+                        <value>stockoutplandetails</value>
+                </setting>
+                <setting name="poItemsPath" serializeAs="String">
+                        <value>poitems</value>
+                </setting>
+                <setting name="stockinReceiptDetailsPath" serializeAs="String">
+                        <value>stockinreceiptdetails</value>
+                </setting>
+                <setting name="stockoutReceiptDetailsPath" serializeAs="String">
+                        <value>stockoutreceiptdetails</value>
+                </setting>
+                <setting name="stockinPlansPath" serializeAs="String">
+                        <value>stockinplans</value>
+                </setting>
+                <setting name="stockoutPlansPath" serializeAs="String">
+                        <value>stockoutplans</value>
+                </setting>
+                <setting name="stockinReceiptsPath" serializeAs="String">
+                        <value>stockinreceipts</value>
+                </setting>
+                <setting name="stockoutReceiptsPath" serializeAs="String">
+                        <value>stockoutreceipts</value>
+                </setting>
+        </StockManagement.Properties.Settings>
+    </userSettings>
 </configuration>
