--- a/StockManagement/StockManagement.csproj
+++ b/StockManagement/StockManagement.csproj
@@ -188,7 +188,7 @@
     <Compile Include="Views\UserLogin.Designer.cs">
       <DependentUpon>UserLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\RestSharpC.cs" />
+    <Compile Include="Model\UserAction.cs" />
     <Compile Include="Model\Printer.cs" />
     <Compile Include="Views\FormHome.cs">
       <SubType>Form</SubType>
