--- a/StockManagement/StockManagement.csproj
+++ b/StockManagement/StockManagement.csproj
@@ -63,14 +63,14 @@
     <Reference Include="DevExpress.XtraReports.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="DevExpress.XtraReports.v20.1.Extensions, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
     <Reference Include="DevExpress.XtraVerticalGrid.v20.1, Version=20.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
-    <Reference Include="Microsoft.IdentityModel.JsonWebTokens, Version=6.11.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.IdentityModel.JsonWebTokens.6.11.0\lib\net461\Microsoft.IdentityModel.JsonWebTokens.dll</HintPath>
+    <Reference Include="Microsoft.IdentityModel.JsonWebTokens, Version=6.11.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IdentityModel.JsonWebTokens.6.11.1\lib\net461\Microsoft.IdentityModel.JsonWebTokens.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.IdentityModel.Logging, Version=6.11.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.IdentityModel.Logging.6.11.0\lib\net461\Microsoft.IdentityModel.Logging.dll</HintPath>
+    <Reference Include="Microsoft.IdentityModel.Logging, Version=6.11.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IdentityModel.Logging.6.11.1\lib\net461\Microsoft.IdentityModel.Logging.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.IdentityModel.Tokens, Version=6.11.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.IdentityModel.Tokens.6.11.0\lib\net461\Microsoft.IdentityModel.Tokens.dll</HintPath>
+    <Reference Include="Microsoft.IdentityModel.Tokens, Version=6.11.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.IdentityModel.Tokens.6.11.1\lib\net461\Microsoft.IdentityModel.Tokens.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -81,9 +81,8 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.IdentityModel" />
-    <Reference Include="System.IdentityModel.Tokens.Jwt, Version=6.11.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.6.11.0\lib\net461\System.IdentityModel.Tokens.Jwt.dll</HintPath>
+    <Reference Include="System.IdentityModel.Tokens.Jwt, Version=6.11.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IdentityModel.Tokens.Jwt.6.11.1\lib\net461\System.IdentityModel.Tokens.Jwt.dll</HintPath>
     </Reference>
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Runtime.Serialization" />
@@ -99,28 +98,37 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
-    <Reference Include="Zen.Barcode.Core">
-      <HintPath>C:\Users\Admin\OneDrive\Desktop\Zen.Barcode.Core.dll</HintPath>
+    <Reference Include="Zen.Barcode.Core, Version=3.1.0.0, Culture=neutral, PublicKeyToken=b5ae55aa76d2d9de, processorArchitecture=MSIL">
+      <HintPath>..\packages\Zen.Barcode.Core.2.0.0\lib\net45\Zen.Barcode.Core.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\Barcode.cs" />
-    <Compile Include="Model\BarcodeGeneration.cs" />
-    <Compile Include="Model\Inventory.cs" />
-    <Compile Include="Model\ReceiptDetail.cs" />
-    <Compile Include="Model\PlanDetail.cs" />
-    <Compile Include="Model\StockoutReceipt.cs" />
-    <Compile Include="Model\StockinReceipt.cs" />
-    <Compile Include="Model\StockoutPlan.cs" />
-    <Compile Include="Model\StockinPlan.cs" />
-    <Compile Include="Model\User.cs" />
+    <Compile Include="Models\Barcode.cs" />
+    <Compile Include="Models\BarcodeGeneration.cs" />
+    <Compile Include="Models\Inventory.cs" />
+    <Compile Include="Models\StockoutReceipt.cs" />
+    <Compile Include="Models\StockinReceipt.cs" />
+    <Compile Include="Models\StockoutPlan.cs" />
+    <Compile Include="Models\StockinPlan.cs" />
+    <Compile Include="Models\User.cs" />
+    <Compile Include="Services\Http.cs" />
+    <Compile Include="Services\PoItemsServices.cs" />
+    <Compile Include="Services\QuotationItemsServices.cs" />
+    <Compile Include="Services\StockinPlanDetailServices.cs" />
+    <Compile Include="Services\StockinPlanServices.cs" />
+    <Compile Include="Services\StockinReceiptDetailServices.cs" />
+    <Compile Include="Services\StockinReceiptServices.cs" />
+    <Compile Include="Services\StockoutPlanDetailServices.cs" />
+    <Compile Include="Services\StockoutPlanServices.cs" />
+    <Compile Include="Services\StockoutReceiptDetailServices.cs" />
+    <Compile Include="Services\StockoutReceiptServices.cs" />
     <Compile Include="Views\BaoCaoThongKe.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\BaoCaoThongKe.Designer.cs">
       <DependentUpon>BaoCaoThongKe.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\ConvertNumbers.cs" />
+    <Compile Include="Models\ConvertNumbers.cs" />
     <Compile Include="Report\rpStockIn.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -199,20 +207,17 @@
     <Compile Include="Views\UserLogin.Designer.cs">
       <DependentUpon>UserLogin.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\UserAction.cs" />
-    <Compile Include="Model\Printer.cs" />
+    <Compile Include="Models\Printer.cs" />
     <Compile Include="Views\FormHome.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Views\FormHome.Designer.cs">
       <DependentUpon>FormHome.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\PO.cs" />
-    <Compile Include="Model\POItem.cs" />
+    <Compile Include="Models\POs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Model\Quoation.cs" />
-    <Compile Include="Model\QuoationItem.cs" />
+    <Compile Include="Models\Quotations.cs" />
     <EmbeddedResource Include="Views\BaoCaoThongKe.resx">
       <DependentUpon>BaoCaoThongKe.cs</DependentUpon>
     </EmbeddedResource>
