--- a/StockManagement/packages.config
+++ b/StockManagement/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.11.0" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Logging" version="6.11.0" targetFramework="net461" />
-  <package id="Microsoft.IdentityModel.Tokens" version="6.11.0" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.11.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.11.1" targetFramework="net461" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.11.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net461" />
   <package id="RestSharp" version="106.11.7" targetFramework="net461" />
-  <package id="System.IdentityModel.Tokens.Jwt" version="6.11.0" targetFramework="net461" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.11.1" targetFramework="net461" />
+  <package id="Zen.Barcode.Core" version="2.0.0" targetFramework="net461" />
 </packages>
