almost complete refactoring

--- a/StockManagement/App.config
+++ b/StockManagement/App.config
@@ -14,15 +14,54 @@
   <applicationSettings>
     
     <StockManagement.Properties.Settings>
-        <setting name="apiEndPoint" serializeAs="String">
-            <value>http://localhost:8000/api/v1/</value>
-        </setting>
-        <setting name="stock" serializeAs="String">
-            <value>SK</value>
-        </setting>
-        <setting name="sale" serializeAs="String">
-            <value>KD</value>
-        </setting>
+      <setting name="apiEndPoint" serializeAs="String">
+        <value>http://localhost:8000/api/v1/</value>
+      </setting>
+      <setting name="stock" serializeAs="String">
+        <value>SK</value>
+      </setting>
+      <setting name="sale" serializeAs="String">
+        <value>KD</value>
+      </setting>
+      <setting name="authorizePath" serializeAs="String">
+        <value>auth/</value>
+      </setting>
+      <setting name="quotationPath" serializeAs="String">
+        <value>quotations</value>
+      </setting>
+      <setting name="inventorysPath" serializeAs="String">
+        <value>inventorys</value>
+      </setting>
+      <setting name="stockinPlanDetailsPath" serializeAs="String">
+        <value>stockinplandetails</value>
+      </setting>
+      <setting name="stockoutPlanDetailsPath" serializeAs="String">
+        <value>stockoutplandetails</value>
+      </setting>
+      <setting name="poPath" serializeAs="String">
+        <value>pos</value>
+      </setting>
+      <setting name="stockinReceiptDetailsPath" serializeAs="String">
+        <value>stockinreceiptdetails</value>
+      </setting>
+      <setting name="stockoutReceiptDetailsPath" serializeAs="String">
+        <value>stockoutreceiptdetails</value>
+      </setting>
+      <setting name="stockinPlansPath" serializeAs="String">
+        <value>stockinplans</value>
+      </setting>
+      <setting name="stockoutPlansPath" serializeAs="String">
+        <value>stockoutplans</value>
+      </setting>
+      <setting name="stockinReceiptsPath" serializeAs="String">
+        <value>stockinreceipts</value>
+      </setting>
+      <setting name="stockoutReceiptsPath" serializeAs="String">
+        <value>stockoutreceipts</value>
+      </setting>
+      <setting name="barcodePath" serializeAs="String">
+        <value>Barcodes</value>
+      </setting>
     </StockManagement.Properties.Settings>
     <DevExpress.LookAndFeel.Design.AppSettings>
       <setting name="DPIAwarenessMode" serializeAs="String">
@@ -97,51 +136,12 @@
   </startup>
 <userSettings>
         <StockManagement.Properties.Settings>
-            <setting name="token" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="roles" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="authorizePath" serializeAs="String">
-                <value>auth/</value>
-            </setting>
-            <setting name="quotationItemsPath" serializeAs="String">
-                <value>quotationitems</value>
-            </setting>
-            <setting name="inventorysPath" serializeAs="String">
-                <value>inventorys</value>
-            </setting>
-            <setting name="stockinPlanDetailsPath" serializeAs="String">
-                <value>stockinplandetails</value>
-            </setting>
-            <setting name="stockoutPlanDetailsPath" serializeAs="String">
-                <value>stockoutplandetails</value>
-            </setting>
-            <setting name="poItemsPath" serializeAs="String">
-                <value>poitems</value>
-            </setting>
-            <setting name="stockinReceiptDetailsPath" serializeAs="String">
-                <value>stockinreceiptdetails</value>
-            </setting>
-            <setting name="stockoutReceiptDetailsPath" serializeAs="String">
-                <value>stockoutreceiptdetails</value>
-            </setting>
-            <setting name="stockinPlansPath" serializeAs="String">
-                <value>stockinplans</value>
-            </setting>
-            <setting name="stockoutPlansPath" serializeAs="String">
-                <value>stockoutplans</value>
-            </setting>
-            <setting name="stockinReceiptsPath" serializeAs="String">
-                <value>stockinreceipts</value>
-            </setting>
-            <setting name="stockoutReceiptsPath" serializeAs="String">
-                <value>stockoutreceipts</value>
-            </setting>
-            <setting name="barcodePath" serializeAs="String">
-                <value>Barcodes</value>
-            </setting>
+                <setting name="token" serializeAs="String">
+                        <value />
+                </setting>
+                <setting name="roles" serializeAs="String">
+                        <value />
+                </setting>
         </StockManagement.Properties.Settings>
     </userSettings>
   <runtime>
