add login service

--- a/StockManagement/StockManagement.csproj
+++ b/StockManagement/StockManagement.csproj
@@ -104,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Barcode.cs" />
+    <Compile Include="Services\AuthServices.cs" />
     <Compile Include="Services\BarcodeGeneration.cs" />
     <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\StockoutReceipt.cs" />
