fix add stockin plan

--- a/StockManagement/App.config
+++ b/StockManagement/App.config
@@ -15,7 +15,7 @@
     
     <StockManagement.Properties.Settings>
       <setting name="apiEndPoint" serializeAs="String">
-        <value>https://bluemoonlab-pmback.herokuapp.com/api/v1/</value>
+        <value>http://localhost:8000/api/v1/</value>
       </setting>
       <setting name="stock" serializeAs="String">
         <value>SK</value>
