implement function do stockin

--- a/StockManagement/App.config
+++ b/StockManagement/App.config
@@ -12,7 +12,7 @@
   <applicationSettings>
     <StockManagement.Properties.Settings>
       <setting name="apiEndPoint" serializeAs="String">
-        <value>https://bluemoonlab-pmback.herokuapp.com/api/v1/</value>
+        <value>http://localhost:8000/api/v1/</value>
       </setting>
       <setting name="stock" serializeAs="String">
         <value>SK</value>
@@ -58,6 +58,12 @@
       </setting>
       <setting name="barcodePath" serializeAs="String">
         <value>Barcodes</value>
+      </setting>
+      <setting name="stockinPath" serializeAs="String">
+        <value>stockins</value>
+      </setting>
+      <setting name="stockoutPath" serializeAs="String">
+        <value>stockouts</value>
       </setting>
     </StockManagement.Properties.Settings>
     <DevExpress.LookAndFeel.Design.AppSettings>
