add PIC for createdBy field

--- a/StockManagement/App.config
+++ b/StockManagement/App.config
@@ -12,7 +12,7 @@
   <applicationSettings>
     <StockManagement.Properties.Settings>
       <setting name="apiEndPoint" serializeAs="String">
-        <value>http://localhost:8000/api/v1/</value>
+        <value>https://bluemoonlab-pmback.herokuapp.com/api/v1/</value>
       </setting>
       <setting name="stock" serializeAs="String">
         <value>SK</value>
@@ -143,6 +143,9 @@
         <value />
       </setting>
       <setting name="roles" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="PIC" serializeAs="String">
         <value />
       </setting>
     </StockManagement.Properties.Settings>
