--- a/StockManagement/Properties/Settings.settings
+++ b/StockManagement/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="apiEndPoint" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">http://localhost:8000/api/v1/</Value>
+      <Value Profile="(Default)">https://bluemoonlab-pmback.herokuapp.com/api/v1/</Value>
     </Setting>
     <Setting Name="stock" Type="System.String" Scope="Application">
       <Value Profile="(Default)">SK</Value>
@@ -61,6 +61,9 @@
     </Setting>
     <Setting Name="stockoutPath" Type="System.String" Scope="Application">
       <Value Profile="(Default)">stockouts</Value>
+    </Setting>
+    <Setting Name="PIC" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
     </Setting>
   </Settings>
 </SettingsFile>
